Fixing the header and right gap when view is smaller than 1150px

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -339,7 +339,7 @@ aside h1, aside h4 {
 	font-size: 14px;
 	line-height: 24px;
 	margin-top: 20px;
-	padding: 40px 0 20px;
+	padding: 30px 0 20px;
 	border-top: 1px solid rgb(240,240,240);
 }
 .post-body > pre {
@@ -868,6 +868,7 @@ aside section h1 {
 
 @media screen and (max-width: 1150px) {
 	header, #page-container, footer { max-width: 752px; margin: 0 auto; }
+	#page-wrapper { overflow: hidden; }
 	#page-container { margin: 30px auto; }
 	#main-search { display: block; width: 690px; padding: 30px; background: white; border: 1px solid rgb(220,220,220); }
 	#main-search input[type=text] { width: 630px; }
